texlive-action do not have makefile.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Build in TexLive env
         uses: xu-cheng/texlive-action/full@v1
         with:
-          run: make all
+          run: |
+            latexmk -quiet -file-line-error -halt-on-error -interaction=nonstopmode en-US.tex zh-CN.tex
 
       - name: Display build log
         run: cat *.log
